--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ textarea {
     margin-bottom: 10px;
     padding: 10px;
     font-size: 2vw;
-    cursor: crosshair;
+    /* cursor: crosshair; */
 
 }
 /*@media(max-width: 600px){
